# iotdb-cli

./: .gitignore  404.html  Cargo.toml  Dockerfile  LICENSE.html  README.md  get-started.html  index.html  install.sh  print.html  searchindex.js  searchindex.json
.fleet/: run.json
.github/workflows/: cargo_fmt.yml  cargo_publish.yml  cargo_test.yml  docker_build.yml  github_release.yml  mdbook_build.yml  mdbook_deploy.yml  packages.yml  test_install_linux.yaml  test_install_mac.yaml  test_install_script.yaml  test_install_win.yaml
docs/: book.toml
docs/src/: SUMMARY.md  get-started.md
https:/github.com/francis-du/iotdb-cli/: actions?query=workflow%3Acargo-publish  actions?query=workflow%3Acargo-publish.html  actions?query=workflow%3Acargo-test  actions?query=workflow%3Acargo-test.html
https:/github.com/francis-du/iotdb-cli/blob/main/: LICENSE.html
src/: cmd.rs  common.rs  main.rs  opt.rs  sub_cmd.rs
src/static/: help_info  usage_info
tests/: create_and_insert.sql
