[package]
name = "iotdb-cli"
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = ["francis-du <francis@francisdu.com>"]
repository = "https://github.com/francis-du/iotdb-cli"
documentation = "https://docs.rs/iotdb-cli"
description = "Apache IotDB CLI Client written in Rust"
keywords = ["cli", "iotdb"]

[[bin]]
name = "iotdb"
path = "src/main.rs"

[dependencies]
dirs = "4.0.0"
structopt = "0.3"
rustyline = "9.0.0"
iotdb = "0.0.6"
#iotdb = { git = "https://github.com/francis-du/iotdb-rs.git", rev = "117158e"}