[package]
name = "iotdb-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = ["github.com/francis-du <me@francis.run>"]
repository = "https://github.com/iotdb-lab/iotdb-cli"
documentation = "https://docs.rs/iotdb-cli"
description = "Apache IotDB CLI Client written in Rust"
keywords = ["cli", "iotdb"]

[[bin]]
name = "iotdb"
path = "src/main.rs"

[dependencies]
dirs = "4.0.0"
structopt = "0.3"
rustyline = "9.0.0"
anyhow = "1.0.53"
simplelog = "0.11.0"
log = "0.4.13"
#iotdb = "0.0.7"
iotdb = { git = "https://github.com/francis-du/iotdb-rs.git", rev = "a3e35ab" }